--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@pollinations/ipfs": "github:pollinations/pollinations-ipfs",
     "@vitalets/google-translate-api": "^9.2.0",
     "await-sleep": "^0.0.1",
-    "cld": "^2.9.0",
     "fastify": "^4.17.0",
     "install": "^0.13.0",
     "jimp": "^0.16.2",
@@ -26,6 +25,7 @@
     "npm": "^9.7.1",
     "p-queue": "^7.3.4",
     "tempfile": "^5.0.0",
+    "tinyld": "^1.3.4",
     "urldecode": "^1.0.1"
   },
   "devDependencies": {
