--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bayes": "^1.0.0",
     "cld": "^2.9.0",
     "cld3-asm": "^3.1.1",
+    "dotenv": "^16.3.1",
     "fastify": "^4.17.0",
     "form-data": "^4.0.0",
     "install": "^0.13.0",
